test/Fail/AnonymousImport.agda
module AnonymousImport where

open import Common.IO as _
open import Common.Unit as _

main : IO Common.Unit.Unit
main = putStrLn ""
